x-overflow & margin fixes (amend)
added overflow hidden to all contains per issue:
https://github.com/michalsnik/aos/issues/416

fixed some margin inconsistencies

AMEND:
fix only needs to be applied to body, putting it on all .container, produces unintended effects to AOS entries

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,6 +1,7 @@
 body {
     background-color: #121212;
     color: #D9D9D9;
+    overflow-x: hidden !important; /*Fix for AOS horizontal overflows on from left/right entries*/
 }
 
 nav {
@@ -236,6 +237,4 @@ footer {
 .container {
     padding-left: 0 !important;
     padding-right: 0 !important;
-    overflow: hidden !important;
-    /*max-width: none !important;*/
 }
